feat: add and require library ids

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@excalidraw/prettier-config": "1.0.2",
     "http-server": "^14.1.0",
+    "lodash": "^4.17.21",
     "node-static": "0.7.11",
     "prettier": "2.5.1"
   },
