use GITHUB_TOKEN when commiting

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,3 +33,5 @@ jobs:
             git commit -am "Auto commit: New data"
             git push
           fi
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
