--- a/.github/workflows/process-libraries.yml
+++ b/.github/workflows/process-libraries.yml
@@ -19,5 +19,5 @@ jobs:
             git config --global user.email 'bot@excalidraw.com'
             git add .
             git commit -am "regenerate itemNames"
-            git push
+            git push ${{ github.head_ref }}
           fi
