--- a/.github/workflows/process-libraries.yml
+++ b/.github/workflows/process-libraries.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   item_names:
-    if: github.repository == 'excalidraw/libraries'
+    if: github.repository == 'excalidraw/excalidraw-libraries'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
