Add three AWS Icons (#796)
Co-authored-by: dwelle <luzar.david@gmail.com>

--- a/.github/workflows/process-libraries.yml
+++ b/.github/workflows/process-libraries.yml
@@ -4,6 +4,7 @@ on: pull_request
 
 jobs:
   item_names:
+    if: github.repository == 'excalidraw/excalidraw-libraries'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
